<resources>
    <string name="app_name">LayoutDemo</string>
    <string name="news_id">Mã tin</string>
    <string name="location">Địa điểm</string>
    <string name="car_status">Tình trạng xe</string>
    <string name="car_from">Xuất xứ</string>
    <string name="car_category">Kiểu dáng</string>
    <string name="car_manufactured_at">Năm sản xuất</string>
    <string name="news_created_at">Ngày đăng</string>
    <string name="forgot_password_msg">Hãy nhập email bạn đã đăng kí với banxehoi.com. Chúng tôi sẽ gửi email lấy lại mật khẩu tới hòm thư của bạn. Vui lòng kiểm tra cả hòm thư Spam</string>
    <string name="input_email_msg">Nhập đúng email của bạn</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="reset_password">Lấy lại mật khẩu</string>

    <string name="signup_msg">Bạn chưa có tài khoản? Hãy đăng kí ngay</string>
    <string name="price_range">Khoảng giá</string>
    <string name="driving">Dẫn động</string>
    <string name="fuel">Nhiên liệu</string>
    <string name="gearbox">Hộp số</string>
    <string name="prefecture">Tỉnh/Thành phố</string>
    <string name="all">Tất cả</string>
    <string name="new_str">Mới</string>
    <string name="old">Cũ</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="domestic">Trong nước</string>
    <string name="international">Quốc tế</string>
    <string name="remove_chosen">Bỏ chọn</string>
    <string name="filter">Lọc</string>
    <string name="search_by_keyword">Tìm theo từ khóa (Gợi ý: Toyota)</string>
    <string name="what_you_looking_for">Bạn tìm gì? Toyota, Camry, ..</string>
    <string name="search_with">Hoặc tìm kiếm với</string>
    <string name="car_brand">Hãng xe</string>
    <string name="car_type">Loại xe</string>
    <string name="search">Tìm kiếm</string>
    <string name="car_type_sedan">Sedan</string>
    <string name="car_type_suv">SUV</string>
    <string name="car_type_coupe">Coupe</string>
    <string name="car_type_cuv">CUV</string>
    <string name="car_type_hatchback">Hatchback</string>
    <string name="car_type_convertible">Convertible</string>
    <string name="car_type_mpv">MPV</string>
    <string name="car_type_crossover">CROSSOVER</string>
    <string name="car_type_luxury">Luxury</string>
    <string name="technical_spec">Thông số kỹ thuật</string>
    <string name="same_type_car">Xe cùng loại</string>
    <string name="same_price_range_car">Xe cùng khoảng giá</string>
    <string name="seller_info">Thông tin người bán</string>
    <string name="image_str">Hình ảnh</string>
    <string name="hide_plate_str">Che biển số</string>
    <string name="insert_your_video_link">Nhập link video của bạn</string>
    <string name="description">Thông tin mô tả</string>
    <string name="car_version">Phiên bản</string>
    <string name="exterior_color">Màu ngoại thất</string>
    <string name="basic_info">Thông tin cơ bản</string>
    <string name="input_door_sum">Nhập số cửa</string>
    <string name="input_seat_sum">Nhập số chỗ ngồi</string>
    <string name="consumtion_level">Mức tiêu thụ</string>
    <string name="input_consumtion_level">Nhập mức tiêu thụ</string>
    <string name="city">Đô thị</string>
    <string name="long_road">Đường trường</string>
    <string name="video">Video</string>
    <string name="register">Đăng kí</string>
    <string name="choose_article_type">Chọn loại tin rao</string>
    <string name="article_type_normal">Tin thường</string>
    <string name="article_type_vip_2">Tin Vip 2</string>
    <string name="article_type_vip_1">Tin Vip 1</string>
    <string name="article_type_vip_pro">Tin Vip Pro</string>
    <string name="register_date">Thời gian đăng</string>
    <string name="auto_up_article">Up tin tự động</string>
    <string name="total_money">Thành tiền</string>
    <string name="save_and_continue">Lưu và Tiếp tục</string>
    <string name="run_fee">Chi phí lăn bánh</string>
    <string name="contact_info">Thông tin liên lạc</string>
    <string name="contact_name">Họ tên</string>
    <string name="contact_address">Địa chỉ</string>
    <string name="contact_phone_number">Số điện thoại</string>
    <string name="contact_email">Email</string>
    <string name="receive_feed_back_email">Nhận email phản hồi</string>
    <string name="preview">Xem trước</string>
    <string name="save_and_register">Lưu và đăng tin</string>
    <string name="prop1">Dài x rộng x cao (mm)</string>
    <string name="prop2">Trọng lượng không tải (kg)</string>
    <string name="prop3">Động cơ</string>
    <string name="prop4">Dung tích động cơ</string>
    <string name="prop5">Dung tích nhiên liệu</string>
    <string name="prop6">Phanh</string>
    <string name="prop7">Bộ giảm xóc</string>
    <string name="prop8">Lốp xe</string>
    <string name="prop9">Vành mâm xe</string>


</resources>
