<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mypc.layoutdemo.ArticleRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textBase"
            android:text="@string/image_str" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/hide_plate_str" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/yes" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/no" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textBase"
            android:text="@string/video" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textBase"
            android:hint="@string/insert_your_video_link" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textBase"
            android:text="@string/description" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/car_brand" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/car_type" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car_manufactured_at"
            android:textAlignment="viewStart" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/car_version" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/car_from"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/domestic"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/international"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/car_status"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/new_str"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                style="@style/textBase"
                android:text="@string/old"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/exterior_color" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textBase"
            android:text="@string/basic_info"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textBase"
            android:hint="@string/input_door_sum"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textBase"
            android:hint="@string/input_seat_sum"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/gearbox" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/driving" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="@string/fuel" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textBase"
            android:text="@string/consumtion_level"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                style="@style/textBase"
                android:hint="@string/input_consumtion_level"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/textBase"
                android:text="@string/city"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                style="@style/textBase"
                android:hint="@string/input_consumtion_level"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/textBase"
                android:text="@string/long_road"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/technical_spec"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textBase"
                android:text="Nhap kich thuoc dai x rong x cao (mm)"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/textBase"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    style="@style/textBase"
                    android:text="X"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/textBase"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    style="@style/textBase"
                    android:text="X"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/textBase"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_border_green"
            android:text="@string/register"/>
    </LinearLayout>

</ScrollView>
