<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mypc.layoutdemo.Contact">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/contact_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/contact_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/contact_address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/prefecture" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/contact_phone_number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/contact_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_feed_back_email"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_margin="5dp"
            android:background="@drawable/curve_border_blue"
            android:text="@string/preview"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_margin="5dp"
            android:background="@drawable/curve_border_green"
            android:text="@string/save_and_register"/>
    </LinearLayout>
</LinearLayout>
