<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mypc.layoutdemo.ArticleUp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/choose_article_type" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/article_type_normal" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/article_type_vip_2" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/article_type_vip_1" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/article_type_vip_pro" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textNormal"
        android:text="@string/register_date"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textNormal"
            android:layout_weight="10"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textNormal"
            android:layout_weight="10"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            style="@style/textNormal"
            android:text="@string/auto_up_article"/>
        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/textNormal"
            android:layout_weight="10"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textNormal"
            android:text="@string/total_money"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textNormal"
            android:text="0 VND"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/curve_border_green"
        android:text='@string/save_and_continue'/>
</LinearLayout>
